--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -9,10 +9,10 @@ Durch die Kombinationen der Hauptfeatures, Schaltvorschlag, Fahrgastkomfortanaly
 
 \section*{Abstract} \todo{Kontrolle}
 
-The Project BestShift, developed by students from the department of information technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automobiles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given.
+The Project BestShift, developed by students from the department of Information Technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automobiles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given.
 
 A modular approach has been chosen for the Car-PC – which means that at any given moment a new sensor can be added and a wider spectrum of representable data is given. The Car-PC additionally serves as a secondary data hub, as the information, provided through the OBD-II, is also stored on it. It is actually not necessary to use all the data provided by the car, hence the Car-PC also filters out the relevant data for the visualisations in our applications.
 
-To give accurate representations of the data as well as giving features that can enhance a driver’s style of driving, BestShift has provided two applications for different scenarios. One being a smartphone application, developed for the Android platform. The Android Application collects the data from the Car-PC directly and is thereby able to give almost real-time graphics with little to no delay. It is also responsible for pushing the sensor data onto the BestShift Servers where the second application – the Web-Application – can further use it. The Web-Application’s focus lies within a wider area. It primarily serves the purpose of saving all car trips by a driver. A driver can use the Web-Application to retrospectively view all of his trips and compare them to other driver’s trips. With the Web-App’s included Social Media integration, the driver can even boast about how good of a driver he is amongst his friends.
+To give accurate representations of the data as well as giving features that can enhance a driver’s style of driving, BestShift provides two applications for different scenarios. One being a smartphone application, developed for the Android platform. The Android Application collects the data from the Car-PC directly and is thereby able to give almost real-time graphics with little to no delay. It is also responsible for pushing the sensor data onto the BestShift Servers where the second application – the Web-Application – can further use it. The Web-Application’s focus lies within a wider area. It primarily serves the purpose of saving all car trips by a driver. A driver can use the Web-Application to retrospectively view all of his trips and compare them to other driver’s trips. With the Web-App’s included Social Media integration, the driver can even boast about how good of a driver he is amongst his friends.
 
 BestShift’s three main features, realized in both Applications, are a gear-shift-recommendation, an analysis of how comfortable the drive is, as well as a fuel consumption analysis. However, through a combination of the features, one can very easily determinate if a driver’s driving style is environmentally friendly.
