--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -14,6 +14,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SETTINGS
 \input{special/preamble.tex}
+\setcounter{secnumdepth}{5}
 
 \linespread{0.94}
 \lhead{Diplomarbeit}
