--- a/diplomarbeit/erklaerung.tex
+++ b/diplomarbeit/erklaerung.tex
@@ -1,5 +1,5 @@
 \section*{Eidestattliche Erklärung}
-Ich erkläre an Eides statt, dass ich die vorliegende Diplomarbeit selbstständig und ohne fremde Hilfe verfasst, andere als angegeben Quellen und Hilfsmittel nicht benutzt und die benutzten Quellen wärtlich und inhaltlich entommenen Stellen als socle erkenntlich gemacht habe.
+Ich erkläre an Eides statt, dass ich die vorliegende Diplomarbeit selbstständig und ohne fremde Hilfe verfasst, andere als angegeben Quellen und Hilfsmittel nicht benutzt und die benutzten Quellen wörtlich und inhaltlich entommenen Stellen als solche erkenntlich gemacht habe.
 
 \vspace{0.5cm}
 
