--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/intro.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/intro.tex
@@ -1,2 +1,2 @@
 \lfoot{Autor: Daniel Melichar}
-Die Speicherung von Daten ist einer der wichtigsten Parte einer jeden Applikation. Ohne gespeicherte Daten könnten es keine Darstellungen, Analysen, oder Verarbeitung geben - die Applikation wurde also gar nicht funktionieren. Die große Frage die sich aber stellt ist wie speichere ich meine Daten sinnvoll und mit möglichst wenig Aufwand? Diese Frage wird in den folgenden Zeilen beantwortet. Grundsätzlich kann man aber vorab schon sagen, dass es keine definitive Antwort auf die Frage gibt - jede Applikation hat eigene Bedürfnisse.
+Die Speicherung von Daten ist einer der wichtigsten Anforderungen einer jeden Applikation. Ohne gespeicherte Daten könnten es keine Darstellungen, Analysen, oder Verarbeitung geben. Eine Speicherungsmtehode muss daher sehr sorgfälltig gewählt werden. Im Folgenden sollen verschiedene Systme betrachtet werden, die für die Datenhaltung im Projekt evaluiert wurden.
