--- a/diplomarbeit/sections/ch3_implementierung/verbrauchsanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/verbrauchsanalyse.tex
@@ -26,18 +26,18 @@ bei den eingesetzten Ressourcen zu fabrizieren.
 
 \subsubsection{Implementierung}
 
+\begin{wrapfigure}{r}{0.3\textwidth}
+    \centering
+    \includegraphics[width=0.3\textwidth]{images/verbrauch}
+    \caption{Die implementierung der Verbrauchsanalyse \cite{BOZH.ch3-verbrauchsanalyse.verbrauch}}
+\end{wrapfigure}
+
 Die Implementierung der Verbrauchsanalyse ist in Form eines dynamischen Liniendiagrammes erfolgt.
 Mit der Library MPAndroidChart, ist es uns gelungen, unser Liniendiagramm dynamisch zu gestalten.
 Das bedeutet, dass nach einer gewissen Zeit, die Aktivität sich selbst aktualisiert.
-Um den Benutzer während der Fahrt nicht mit unnötigen Informationen zu beladen, wurden die graphischen
-Elemente innerhalb der Applikation schlicht gehalten.
+Um den Benutzer während der Fahrt nicht mit unnötigen Informationen zu beladen, wurden die graphischen Elemente innerhalb der Applikation schlicht gehalten.\nextline
 Während der Fahrt fokussiert sich der Benutzer von BestShift darauf, die rote Begrenzungslinie nicht zu überschreiten.
 Somit erzielt man auf kurzer Dauer einen geringeren Kraftstoffverbrauch.
-\begin{wrapfigure}{r}{0.6\textwidth}
-    \centering
-    \includegraphics[width=0.6\textwidth]{images/verbrauch}
-    \caption{Die implementierung der Verbrauchsanalyse \cite{BOZH.ch3-verbrauchsanalyse.verbrauch}}
-\end{wrapfigure}
 
 
 \clearpage % DO NOT REMOVE
