--- a/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
@@ -82,6 +82,15 @@ Die folgenden Frameworks und Libaries wurden in Betracht gezogen. Letzendlich ha
 \caption{Angular 2.0 - \url{https://angular.io/}}
 \end{table}
 
+\textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation muss man so gennante HTML \textit{templates} im Angular-Stil, einige \textit{component} Klassen welche die templates managen, und die Logik hinter der Applikation in so gennanten \textit{services}, schreiben \cite{MELD.CH3-web-app.angular}.
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.8\textwidth]{images/angular}
+	\caption{Angular Architektur \cite{MELD.CH3-web-app.angular}}
+\end{figure}
+
+
+
 \begin{table}[!htb]
 \centering
 \resizebox{\columnwidth}{!}{%
@@ -100,6 +109,14 @@ Die folgenden Frameworks und Libaries wurden in Betracht gezogen. Letzendlich ha
 \caption{Ember 2.0 \url{http://emberjs.com/}}
 \end{table}
 
+\textbf{Ember.js 2.0} ähnelt sehr stak dem Angulars Architektur Konzept. Der Grund wieso wir uns Ember nicht verwenden basiert auf der simpleren, etwas schöneren API von Angular, und den Fakten, dass Angular keine weiteren Dependencies hat (Ember.js verwendet jQuery und Handlebars) und dass Angular eine viel geringere Filegröße hat \cite{MELD.CH3-web-app.ember}.
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.6\textwidth]{images/ember}
+	\caption{Ember Architektur \cite{MELD.CH3-web-app.ember}}
+\end{figure}
+
+\clearpage
 
 \begin{table}[!htb]
 \centering
@@ -118,5 +135,12 @@ Die folgenden Frameworks und Libaries wurden in Betracht gezogen. Letzendlich ha
 }
 \caption{React 1.0 \url{https://facebook.github.io/react/}}
 \end{table}
+
+Das von Facebook entwickelte \textbf{React.js} ist ein eher spezielles Framework, oftmals wird gesagt, dass React.js das \textbf{V} im MVC-Konzept (Model-View-Control) da bietet. Aufgrund dessen ist die Filegröße des Frameworks um einiges kleiner als bei den anderen beiden, bietet aber dennoch viele der Basis Features an \cite{MELD.CH3-web-app.react}. Leider bietet React nicht alles an was für unsere Applikation benötigt wird, daher ging es rasch aus der ängeren Auswall raus.
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=0.8\textwidth]{images/react}
+	\caption{React Architektur \cite{MELD.CH3-web-app.react}}
+\end{figure}
 
 \clearpage
