--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -27,6 +27,14 @@
     note = {Accessed on 22.03.2016}
 }
 
+@misc{MELD.CH2-relationaleDB.performacne, 
+    author = {Christoforos Hadjigeorgiou},
+    year = {2013},
+    title = {RDBMS vs NoSQL: Performance and Scaling Comparison},
+    howpublished = "Computer 43",
+    note = {Accessed on 23.03.2016}
+}
+
 @misc{MELD.CH2-noSQL.firstSQLNaming, 
     author = {Carlo Strozzi},
     year = {2007-2010},
@@ -131,6 +139,29 @@
     note = {Accessed on 30.03.2016}
 }
 
+@misc{MELD.CH3-web-app.angular, 
+    author = {Google Inc.},
+    year = {2016},
+    title = {Angular 2.0 Dokumentation},
+    howpublished = "\url{https://angular.io/docs/ts/latest/guide/architecture.html}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.ember, 
+    author = {Tilde Inc.},
+    year = {2016},
+    title = {Ember 2.0 Dokumentation},
+    howpublished = "\url{https://guides.emberjs.com/v2.4.0/getting-started/core-concepts/}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-web-app.react, 
+    author = {Facebook Inc.},
+    year = {2016},
+    title = {React Dokumentation},
+    howpublished = "\url{https://facebook.github.io/react/blog/2014/07/30/flux-actions-and-the-dispatcher.html}",
+    note = {Accessed on 30.03.2016}
+}
 
 @misc{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
@@ -449,14 +480,6 @@ note = {Accessed on 30.03.2016}
     author = {EasyWordMall, Amazon Reseller},
     year = {2015},
     title = {GY521 Sensor Close-Up},
-    howpublished = "\url{http://www.amazon.de/EasyWordMall-MPU-6050-Achsen-Gyroskop-Beschleunigungsmesser-%20Arduino/dp/B00WHYNF2W/ref=sr_1_12?ie=UTF8&qid=1459344618&sr=8-12&keywords=GY521}",
-    note = {Accessed on 31.03.2016}
-}
-
-@misc{PERT.CH3-carpc.gy521, 
-    author = {EasyWordMall, Amazon Reseller},
-    year = {2015},
-    title = {GY521 Temperatursensor Close-Up},
     howpublished = "\url{http://www.amazon.de/EasyWordMall-MPU-6050-Achsen-Gyroskop-Beschleunigungsmesser-%20Arduino/dp/B00WHYNF2W/ref=sr_1_12?ie=UTF8&qid=1459344618&sr=8-12&keywords=GY521}",
     note = {Accessed on 31.03.2016}
 }
