--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
@@ -2,13 +2,15 @@
 \subsubsection{Bluetooth}
 \label{subsec:Bluetooth}
 Bluetooth ist eine kabellose Variante wie mehrere Geräte über kurze Distanz miteinander Kommunizieren können.
- 
-\begin{figure}[!htb]\centering
-	\includegraphics[width=0.8\textwidth]{images/bluetooth}
-	\caption{Bluetooth Logo, inspiriert vom König von Norwegen und Dänemark, Harald Blauzahn \cite{PERT.CH2-bluetooth.logo}}\label{Fig:imgBluetoothLogo}
-\end{figure}
 
-\textbf{Kommunikation\nextline}
+\begin{wrapfigure}{r}{0.2\textwidth}
+  \begin{center}
+    \includegraphics[width=0.2\textwidth]{images/bluetooth}
+  \end{center}
+  \caption{Bluetooth Logo, inspiriert vom König von Norwegen und Dänemark, Harald Blauzahn \cite{PERT.CH2-bluetooth.logo}}\label{Fig:imgBluetoothLogo}
+\end{wrapfigure}
+
+\textbf{Kommunikation\newline}
 Eine Kommunikation mittels Bluetooth kann man in folgende Schritte unterteilen.
 \nextline
 •	Ein Gerät auswählen mit welchem man kommunizieren möchte
